@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Status of series
 
 
 Version 0.2.0 (2012/09/16)
